--- a/src/components/PlusCard/PlusCard.module.css
+++ b/src/components/PlusCard/PlusCard.module.css
@@ -1,6 +1,6 @@
 .PlusCard {
-    width: 200px;
-    height: 120px;
+    width: 220px;
+    height: 160px;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
